--- a/index-para-git.html
+++ b/index-para-git.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant</li>
-            <li>Docker: Ccreando containers sin dolor de cabeza</li>
+            <li>Vagrant: Gerenciando máquinas virtuales</li>
+            <li>Docker: Creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integración Contínua: Madurez y productividad en el desarrollo de software</li>
         </ul>
