--- a/index-para-git.html
+++ b/index-para-git.html
@@ -10,7 +10,7 @@
             <li>Docker: Creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integración Contínua: Madurez y productividad en el desarrollo de software</li>
-            <li>Kubernetes</li>
+            <li>Kubernetes: Introduccion a la orquestacion de containers</li>
         </ul>
     </body>
 </html>
