--- a/index-para-git.html
+++ b/index-para-git.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Vagrant: Gerenciando máquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
-            <li>Ansible</li>
+            <li>Ansible: Su Infraestructura como codigo</li>
             <li>Integración Contínua: Madurez y productividad en el desarrollo de software</li>
             <li>Kubernetes: Introduccion a la orquestacion de containers</li>
         </ul>
